Polaris gem e4 waypoint mode

--- a/modules/guardian/conf/guardian.conf
+++ b/modules/guardian/conf/guardian.conf
@@ -2,4 +2,4 @@
 --alsologtostderr=1
 --adapter_config_filename=modules/guardian/conf/adapter.conf
 --guardian_cmd_freq=100
---guardian_enabled
+--noguardian_enabled
