--- a/modules/perception/conf/dag_streaming.config
+++ b/modules/perception/conf/dag_streaming.config
@@ -9,12 +9,12 @@ subnode_config {
     }
 
     # Front radar Input nodes.
-    subnodes {
-        id: 2
-        name: "RadarProcessSubnode"
-        reserve: "device_id:radar;"
-        type: SUBNODE_IN
-    }
+#    subnodes {
+#        id: 2
+#        name: "RadarProcessSubnode"
+#        reserve: "device_id:radar;"
+#        type: SUBNODE_IN
+#    }
 
     # Fusion node.
     subnodes {
@@ -25,17 +25,17 @@ subnode_config {
     }
 
     # TrafficLight Preprocess node.
-    subnodes {
-        id: 41
-        name: "TLPreprocessorSubnode"
-        type: SUBNODE_IN
-    }
+#    subnodes {
+#        id: 41
+#        name: "TLPreprocessorSubnode"
+#        type: SUBNODE_IN
+#    }
     # TrafficLight process node.
-    subnodes {
-        id: 42
-        name: "TLProcSubnode"
-        type: SUBNODE_OUT
-    }
+#    subnodes {
+#        id: 42
+#        name: "TLProcSubnode"
+#        type: SUBNODE_OUT
+#    }
 }
 
 ###################################################################
@@ -53,25 +53,25 @@ edge_config {
     }
 
     # Radar RadarProcessSubnode -> FusionSubnode
-    edges {
-        id: 102
-        from_node: 2
-        to_node: 31
-        events {
-            id: 1002
-            name: "radar_fusion"
-        }
-    }
+#    edges {
+#        id: 102
+#        from_node: 2
+#        to_node: 31
+#        events {
+#            id: 1002
+#            name: "radar_fusion"
+#        }
+#    }
    # TLPreprocessorSubnode -> TLProcSubnode
-    edges {
-        id: 201
-        from_node: 41
-        to_node: 42
-        events {
-            id: 1003
-            name: "traffic_light"
-        }
-    }
+#    edges {
+#        id: 201
+#        from_node: 41
+#        to_node: 42
+#        events {
+#            id: 1003
+#            name: "traffic_light"
+#        }
+#    }
 }
 
 data_config {
@@ -79,14 +79,14 @@ data_config {
         id: 1
         name: "LidarObjectData"
     }
-    datas {
-        id: 2
-        name: "RadarObjectData"
-    }
-    datas {
-        id: 3
-        name: "TLPreprocessingData"
-    }
+#    datas {
+#        id: 2
+#        name: "RadarObjectData"
+#    }
+#    datas {
+#        id: 3
+#        name: "TLPreprocessingData"
+#    }
     datas {
         id: 4
         name: "SceneSharedData"
